[package]
name = "lightning-relay-sample-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
argh = "0.1.12"
axum = "0.7.5"
hex = { package = "hex-conservative", version = "0.2.0" }
ldk-node = { path = "../../ldk-node", features = ["relay"] }
rand = "0.8.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
